tests/org.eclipse.php.core.tests/workspace/errors/php7/invalidConstantExpression6.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
class MyClass {
    const FOO = <<<BAR
SOMETHING $var 
BAR;
}
?>
--EXPECT--
[line=4, start=55, end=59] Constant expression contains invalid operations
[line=4, start=55, end=59] Variable '$var' is undefined